--- a/app/views/recipes/creador.html.haml
+++ b/app/views/recipes/creador.html.haml
@@ -7,4 +7,4 @@
 						= link_to recipe do
 							= image_tag recipe.image.url(:medium)
 					%h2= link_to recipe.title, recipe
-					%h2= link_to recipe.user.id
+					%h2= link_to recipe.user.name
