--- a/app/views/recipes/_form.html.haml
+++ b/app/views/recipes/_form.html.haml
@@ -8,7 +8,7 @@
 				- @recipe.errors.full_messages.each do |msg|
 					%li= msg
 	.panel-body
-		= f.collection_select :category_id, Category.all, :id, :name, {promt: "Escoge un grupo"}
+		= f.collection_select :category_id, Category.all, :id, :name, {promt: "Escoge un grupo"}, input_html: { class: 'form-group', style: 'margin-top: 8px' }
 		= f.input :title, placeholder: "¿Que nombre tiene?", label: false, input_html: { class: 'form-control', style: 'margin-top: 8px' }
 		= f.input :description, placeholder: "Sígue contando", label: false, input_html: { class: 'form-control', style: 'margin-top: 8px' }
 		= f.input :image, label: false, input_html: { class: 'form-control', style: 'margin-top: 8px' }
