Despues de Koala Gem

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,7 @@
 			- if user_signed_in?
 				%ul.nav.navbar-nav.navbar-right
 					%li= link_to "Nueva Receta", new_recipe_path
+					%li= link_to "Usuarios", users_path
 					%li= link_to "Mis Recetas", misrecetas_path
 					%li= link_to "Ver grupos", grupos_path
 					%li= link_to "Salir", destroy_user_session_path, method: :delete
