--- a/app/views/recipes/group_index.html.haml
+++ b/app/views/recipes/group_index.html.haml
@@ -1,5 +1,6 @@
 - Category.all.each do |category|
-	.col-sm-3
+	.col-md-3
 		.cat_wrap
 			%h2= link_to category.name, recipes_path(category: category.name)
+			%h2= category.recipes.size
 	
