--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,6 +6,7 @@
   <div class="form-inputs">
     <%= f.input :name, required: true, autofocus: true, input_html: { class: 'form-control' } %>
     <%= f.input :email, required: true %>
+    <%= f.input :avatar, required: true %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
