--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,6 +10,7 @@
 		    <%= f.input :email, required: true, input_html: { class: 'form-control' } %>
 		    <%= f.input :password, required: true, input_html: { class: 'form-control' } %>
 		    <%= f.input :password_confirmation, required: true, input_html: { class: 'form-control' } %>
+		    <%= f.input :avatar, label: false, input_html: { class: 'form-control', style: 'margin-top: 8px' }, required: true %>
 		  </div>
 			<br>
 		  <div class="form-actions">
