--- a/app/views/recipes/index.html.haml
+++ b/app/views/recipes/index.html.haml
@@ -10,5 +10,8 @@
 						= link_to recipe do
 							= image_tag recipe.image.url(:medium)
 					%h2= link_to recipe.title, recipe
-					%h2= link_to recipe.user.name
+					%span.glyphicon.glyphicon-heart.pull-right
+					%span.glyphicon.glyphicon-user.pull-right
+					%h3= link_to recipe.user.name
+
 
