--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,6 +1,7 @@
 .container
 	- @users.each do |u|
 		.col-md-6.col-md-offset-3.cat_wrap
-			%h1= link_to u.name, u
-			%h1= u.recipes.size
-
+			= image_tag u.avatar.url
+			.row
+				%h2.pull-right= u.recipes.size
+				%h1= link_to u.name, u
