--- a/app/views/recipes/_form.html.haml
+++ b/app/views/recipes/_form.html.haml
@@ -12,6 +12,7 @@
 		= f.input :title, placeholder: "¿Que nombre tiene?", label: false, input_html: { class: 'form-control', style: 'margin-top: 8px' }
 		= f.input :description, placeholder: "Sígue contando", label: false, input_html: { class: 'form-control', style: 'margin-top: 8px' }
 		= f.input :image, label: false, input_html: { class: 'form-control', style: 'margin-top: 8px' }
+		= f.input :tag_list, label: false, input_html: { class: 'form-control', style: 'margin-top: 8px' }, placeholder: "Etiquetas separadas por comas"
 
 		.row
 			.panel-body
