--- a/app/views/recipes/indexin.html.haml
+++ b/app/views/recipes/indexin.html.haml
@@ -1,5 +1,5 @@
-.jumbotron
-	%h3 Para nunca perderlas y poder compartirlas
+.container
+	
 - @recipe.each_slice(4) do |recipes|
 	.row
 		- recipes.each do |recipe|
