--- a/app/views/recipes/index.html.haml
+++ b/app/views/recipes/index.html.haml
@@ -11,6 +11,6 @@
 					%h2= link_to recipe.title, recipe
 					%span.glyphicon.glyphicon-heart.pull-right
 					%span.glyphicon.glyphicon-user.pull-right
-					%h3= link_to recipe.user.name
+					%h3= link_to recipe.user.name, users_path
 
 
