--- a/app/views/recipes/_form.html.haml
+++ b/app/views/recipes/_form.html.haml
@@ -13,6 +13,7 @@
 		= f.input :description, placeholder: "Sígue contando", label: false, input_html: { class: 'form-control', style: 'margin-top: 8px' }
 		= f.input :image, label: false, input_html: { class: 'form-control', style: 'margin-top: 8px' }
 		= f.input :tag_list, label: false, input_html: { class: 'form-control', style: 'margin-top: 8px' }, placeholder: "Etiquetas separadas por comas"
+		= f.input :youtube, label: false, input_html: { class: 'form-control', style: 'margin-top: 8px' }, placeholder: "embed video on youtube"
 
 		.row
 			.panel-body
