--- a/app/views/recipes/show.html.haml
+++ b/app/views/recipes/show.html.haml
@@ -29,7 +29,9 @@
 				%ul
 					- @recipe.directions.each do |direction|
 						%li= direction.step
-
+		.col-sm-6
+			#recipe_info
+				%iframe{ :width => "100%", :height => "300", :src => "#{@recipe.youtube}", :frameborder => "0", :allowfullscreen => true}
 	.row
 		.col-md-12
 			= link_to "Back", root_path, class: "btn btn-default"
